--- a/manuscript/PUMP_Manuscript.tex
+++ b/manuscript/PUMP_Manuscript.tex
@@ -135,7 +135,7 @@ Multiple Outcomes}
 \section*{Abstract}
 
 For randomized controlled trials (RCTs) with a single intervention being
-measured on multiple outcomes, researchers typically apply a multiple
+measured on multiple outcomes, researchers often apply a multiple
 testing procedure (such as Bonferroni or Benjamini-Hochberg) to adjust
 \(p\)-values. Such an adjustment reduces the likelihood of spurious
 findings, but also changes the statistical power, sometimes
